peek.css
.line {
  fill: none;
  stroke: steelblue;
  stroke-width: 2;
}

.axis path, .axis line{
  fill: none;
  stroke: grey;
  stroke-width: 1;
  shape-rendering: crispEdges; 
}

.axis text {
  font-family: sans-serif;
  font-size: 11px;
}

.grid .tick {
    stroke: lightgrey;
    opacity: 0.7;
}
.grid path {
    stroke-width: 0;
}

#legend, #plot {float: left;}

#legend {
	width: 300px;
}

#controls {
	clear: both;
}

.key {
	width: 15px;
	height: 10px;
	display: inline-block;
}
.key-text {
	padding-left: 5px;
}

/*pie charts*/
.piebox, .legendbox {
  padding: 20px;
  float: left;
}

